[package]
name = "multi-thread-metrics-usage"
version = "0.1.0"
authors = ["yamadapc <tacla.yamada@gmail.com>"]
edition = "2018"

[dependencies]
async-std = { version = "1.7.0", features = ["unstable"] }
env_logger = "0.8.1"
log = "0.4.11"
metrics = "0.13.1"
metrics-exporter-prometheus = "0.2.0"
tokio = { version = "1.1.1", features = ["full"] }

